# StyleTTS2

./: .gitignore  inference_script.py  pyproject.toml  requirements.txt  run_finetune.bat  train_finetune_accelerate.py  utils.py  webui.py
Configs/: config_ft.yml
Data/: .gitignore
Modules/: hifigan.py  slmadv.py
styletts2/: models.py  utils.py
