[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "styletts2"
version = "1.0"
description = "Installable package for styletts2"
authors = [
    { name = "Jarod Mica" }
]

dependencies = [
    "SoundFile",
    "torchaudio",
    "munch",
    "torch",
    "pydub",
    "pyyaml",
    "librosa",
    "nltk",
    "matplotlib",
    "accelerate",
    "transformers",
    "einops",
    "einops-exts",
    "tqdm",
    "typing",
    "typing-extensions",
    "phonemizer",
    "gradio"
]

requires-python = ">=3.9"

[project.optional-dependencies]
monotonic_align = [
    "monotonic-align @ git+https://github.com/resemble-ai/monotonic_align.git"
]

[project.urls]
repository = "https://github.com/JarodMica/StyleTTS2"

[tool.setuptools.packages.find]
include = ["styletts2", "styletts2.*"]
